--- a/local/public/stylesheets/map-styles.css
+++ b/local/public/stylesheets/map-styles.css
@@ -11,7 +11,9 @@ path:hover, circle:hover {
 
 #stateName {
   position: absolute;
-  color: black;
+  color: white;
+  text-shadow: 1px 1px 1px black;
   font-size:16px;
-  pointer-events:none
+  pointer-events:none;
+  font-family: Courier;
 }
